split out mmap implementation into a .cpp file

--- a/include/libtorrent/Makefile.am
+++ b/include/libtorrent/Makefile.am
@@ -204,6 +204,7 @@ nobase_include_HEADERS = \
   aux_/typed_span.hpp               \
   aux_/array.hpp                    \
   aux_/ip_notifier.hpp              \
+  aux_/mmap.hpp                     \
   \
   extensions/smart_ban.hpp          \
   extensions/ut_metadata.hpp        \
