--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -66,6 +66,7 @@ libtorrent_rasterbar_la_SOURCES = \
   disk_io_job.cpp                 \
   disk_io_thread.cpp              \
   disk_io_thread_pool.cpp         \
+  disabled_disk_io.cpp            \
   disk_job_fence.cpp              \
   disk_job_pool.cpp               \
   entry.cpp                       \
